--- a/index.html
+++ b/index.html
@@ -137,30 +137,6 @@
             color: aliceblue;
         }
 
-        .section02 .box04{
-            position: relative;
-            height: 320px;
-            width: 25%;
-            border-radius: 10%;
-            background-color: rgb(41, 51, 78);
-            line-height: 250px;
-            text-align: center;
-            background-image: url(images/Mimog.webp);
-            color: aliceblue;
-        }
-
-        .section02 .box05{
-            position: absrelativeolute;
-            height: 320px;
-            width: 25%;
-            border-radius: 10%;
-            background-color: rgb(41, 51, 78);
-            line-height: 250px;
-            text-align: center;
-            background-image: url(images/Mimog.webp);
-            color: aliceblue;
-        }
-
         .section02 a{
             background-color: rgba(0, 0, 0, 0.3);
             text-decoration: none;
@@ -203,18 +179,18 @@
 
     <div class="section02">
         <div class="box01 bg-cover">
-            <p><a href="20260129/0129-1.html" target="_blank">作品集1</a></p>
+            <p><a href="HTML/0205-practice.html" target="_blank">作品集1</a></p>
         </div>
         <div class="box02 bg-cover">
-            <p><a href="20260127/0127-ex-1.html" target="_blank">作品集2</a></p>
+            <p><a href="HTML/0210-ex3.html" target="_blank">作品集2</a></p>
         </div>
         <div class="box03 bg-cover">
-            <p><a href="20260203/0203-3.html" target="_blank">作品集3</a></p>
+            <p><a href="HTML/0212-1.html" target="_blank">作品集3</a></p>
         </div>
     </div>
     
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/jquery-4.0.0.js"></script>
-    
+
 </body>
 </html>
