--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         }
 
         .section02 .box01{
-            position: relative;
+            position: absolute;
             height: 320px;
             width: 25%;
             border-radius: 10%;
@@ -114,7 +114,7 @@
         }
 
         .section02 .box02{
-            position: relative;
+            position: absolute;
             height: 320px;
             width: 25%;
             border-radius: 10%;
@@ -126,7 +126,7 @@
         }
 
         .section02 .box03{
-            position: relative;
+            position: absolute;
             height: 320px;
             width: 25%;
             border-radius: 10%;
