--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>個人簡歷製作</title>
     <link rel="stylesheet" href="css/mycss01.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="">
 
     <style>
 
@@ -104,8 +103,9 @@
         .section02 .box01{
             position: absolute;
             height: 320px;
-            width: 25%;
-            border-radius: 10%;
+            width: 320px;
+            border-radius: 50%;
+            left: 5%;
             background-color: rgb(41, 51, 78);
             line-height: 250px;
             text-align: center;
@@ -116,8 +116,9 @@
         .section02 .box02{
             position: absolute;
             height: 320px;
-            width: 25%;
-            border-radius: 10%;
+            width: 320px;
+            border-radius: 50%;
+            left: 40%;
             background-color: rgb(41, 51, 78);
             line-height: 250px;
             text-align: center;
@@ -128,8 +129,9 @@
         .section02 .box03{
             position: absolute;
             height: 320px;
-            width: 25%;
-            border-radius: 10%;
+            width: 320px;
+            border-radius: 50%;
+            left: 70%;
             background-color: rgb(41, 51, 78);
             line-height: 250px;
             text-align: center;
