--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
                 </div>
                 <div class="h3 text-center fw-700">作品集1</div>
             </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="content_box roller">
                 <div class="roller_box-r">
                     <a href="HTML/0210-ex3.html" target="_blank"><button class="btn btn-dark">查看更多</button></a>
@@ -150,6 +152,8 @@
                 </div>
                 <div class="h3 text-center fw-700">作品集2</div>
             </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="content_box roller">
                 <div class="roller_box-r">
                     <a href="HTML/0212-1.html" target="_blank"><button class="btn btn-dark">查看更多</button></a>
