--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>個人簡歷製作</title>
-    <link rel="stylesheet" href="css/mycss01.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/mycss01.css">
 
     <style>
         .section01 {
@@ -124,7 +124,6 @@
         <div class="logo bg-cover"></div>
         <div class="user_text">
             <div class="title-01">Huang Po Yan</div>
-            <hr>
             <div class="title-02">精益求精</div>
             <p class="title-03">個人敘述(還沒想到)</p>
         </div>
