--- a/HTML/0224-2.html
+++ b/HTML/0224-2.html
@@ -33,6 +33,37 @@
             left: 50%;
             transform: translateX(-50%);
         }
+
+        .timeline-section-pointer{
+            position: relative;
+        }
+
+        .timeline-section-pointer::before{
+            position: absolute;
+            content: "";
+            width: 24px;
+            height: 24px;
+            background-color: var(--Testcolor07);
+            border-radius: 50%;
+            left: 50%;
+            transform: translateX(-50%);
+            top: 0;
+            border: 6px solid var(--Testcolor06);
+        }
+
+        .timeline-section-pointer:hover::before{
+            width: 28px;
+            height: 28px;
+        }
+
+        @media screen and (max-width: 768px) {
+            .timeline-section::before{
+                display: none;
+            }
+            .timeline-section-pointer::before{
+                display: none;
+            }
+        }
     </style>
 
 </head>
@@ -43,7 +74,7 @@
 
         <div class="timeline-section">
 
-            <div class="row align-items-center">
+            <div class="row align-items-center timeline-section-pointer">
                 <div class="col-md-6">
                     <div class="pimg bg-cover" style="background-image: url(../images/pokemon/1.png);"></div>
                 </div>
@@ -57,7 +88,7 @@
                 </div>
             </div>
 
-            <div class="row align-items-center flex-row-reverse">
+            <div class="row align-items-center flex-row-reverse timeline-section-pointer">
                 <div class="col-md-6">
                     <div class="pimg bg-cover" style="background-image: url(../images/pokemon/2.png);"></div>
                 </div>
@@ -71,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="row align-items-center">
+            <div class="row align-items-center timeline-section-pointer">
                 <div class="col-md-6">
                     <div class="pimg bg-cover" style="background-image: url(../images/pokemon/3.png);"></div>
                 </div>
@@ -85,7 +116,7 @@
                 </div>
             </div>
 
-            <div class="row align-items-center flex-row-reverse">
+            <div class="row align-items-center flex-row-reverse timeline-section-pointer">
                 <div class="col-md-6">
                     <div class="pimg bg-cover" style="background-image: url(../images/pokemon/4.png);"></div>
                 </div>
